Crash in [@ mozilla::dom::ContentParent::IsDead]
Categories
(Core :: DOM: Content Processes, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox128 | --- | unaffected |
| firefox129 | --- | fixed |
| firefox130 | --- | fixed |
People
(Reporter: aryx, Assigned: nika)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
8 crash reports from 7 installs of Firefox 129 betas, all with 32-builds on Windows and the crash after Firefox had been running for more than an hour.
Does anything need to be done?
Crash report: https://crash-stats.mozilla.org/report/index/70756e25-d14f-4ca7-9690-883720240718
Reason: EXCEPTION_ACCESS_VIOLATION_READ
Top 10 frames:
0 xul.dll mozilla::dom::ContentParent::IsDead() const dom/ipc/ContentParent.h:432
0 xul.dll mozilla::dom::ContentParent::WaitForLaunchAsync(mozilla::hal::ProcessPriority... dom/ipc/ContentParent.cpp:1042
1 xul.dll mozilla::PreallocatedProcessManagerImpl::AllocateNow() dom/ipc/PreallocatedProcessManager.cpp:319
2 xul.dll mozilla::detail::RunnableMethodArguments<>::apply<mozilla::ipc::PortLink::Por... xpcom/threads/nsThreadUtils.h:1085
2 xul.dll std::invoke(mozilla::detail::RunnableMethodArguments<>::apply<mozilla::ipc::P... /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/type_traits:1729
2 xul.dll std::_Apply_impl(mozilla::detail::RunnableMethodArguments<>::apply<mozilla::i... /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/tuple:1077
2 xul.dll std::apply(mozilla::detail::RunnableMethodArguments<>::apply<mozilla::ipc::Po... /builds/worker/fetches/vs/VC/Tools/MSVC/14.39.33519/include/tuple:1088
2 xul.dll mozilla::detail::RunnableMethodArguments<>::apply(mozilla::ipc::PortLink::Por... xpcom/threads/nsThreadUtils.h:1083
2 xul.dll mozilla::detail::RunnableMethodImpl<RefPtr<mozilla::ipc::PortLink::PortObserv... xpcom/threads/nsThreadUtils.h:1134
3 xul.dll mozilla::RunnableTask::Run() xpcom/threads/TaskController.cpp:580
| Assignee | ||
Comment 1•1 year ago
|
||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 3•1 year ago
|
||
| bugherder | ||
Comment 4•1 year ago
|
||
The patch landed in nightly and beta is affected.
:nika, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox129towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 5•1 year ago
|
||
Comment on attachment 9413814 [details]
Bug 1908789 - Check for null return from MakePreallocProcess, r=#ipc-reviewers!
Beta/Release Uplift Approval Request
- User impact if declined: Rare crash when starting prealloc processes (mostly on 32-bit windows)
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just adding a null check
- String changes made/needed: None
- Is Android affected?: Yes
Comment 6•1 year ago
|
||
Comment on attachment 9413814 [details]
Bug 1908789 - Check for null return from MakePreallocProcess, r=#ipc-reviewers!
Approved for 129.0b9
Updated•1 year ago
|
Description
•