Bug 1908789 - Check for null return from MakePreallocProcess, r=ipc-reviewers,mccr8

Differential Revision: https://phabricator.services.mozilla.com/D217103